@@ -52,6 +52,7 @@
  50. More new questmaker templates: normal_killer2, normal_escort1, normal_escort2, normal_mystery1, normal_mystery2
  51. New DEBUG options: SCRIPTVARS and SCRIPTTRACE
  52. Yet more questmaker templates: *_delivery3
+ 53. Prop_Unsellable has new arguments
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
   2. New wainwrighting & smelting recipes
